--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -10,6 +10,10 @@ $nasaDarkRed: #700000;
 $nasaRed: #8f0000;
 $nasaLightRed: #ef0005;
 
+/* Media Queries */
+$breakpoint-mobile: 576px;
+$breakpoint-desktop: 992px;
+
 /* Colors */
 $bodyColor: $nasaBlack;
 $fontPrimaryColor: #ffffff;
