--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 /* Color Constants */
+/* Media Queries */
 /* Colors */
 /* Global Elements */
 html {
@@ -13,16 +14,18 @@ h1 {
   text-transform: uppercase; }
 
 /* Classes */
-.navbar-brand {
-  margin-left: 12%; }
-
-.collapse.navbar-collapse {
-  margin-right: 12%; }
-
 .nav-item {
   font-size: 20px; }
 
 .navbar-dark .nav-item.active .nav-link {
   font-weight: 800; }
+
+/* Desktop Queries */
+@media screen and (min-width: 992px) {
+  .navbar-brand {
+    margin-left: 12%; }
+
+  .collapse.navbar-collapse {
+    margin-right: 12%; } }
 
 /*# sourceMappingURL=style.css.map */
