--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -6,6 +6,7 @@ $nasaWhite: #ebebeb;
 $nasaDarkBlue: #021e50;
 $nasaBlue: #032D77;
 $nasaLightBlue: #0645b1;
+$nasaLighterBlue: #5292FF;
 $nasaDarkRed: #700000;
 $nasaRed: #8f0000;
 $nasaLightRed: #ef0005;
@@ -15,6 +16,7 @@ $breakpoint-mobile: 576px;
 $breakpoint-desktop: 992px;
 
 /* Colors */
-$bodyColor: $nasaBlack;
+$bodyColor: #0d0d0d;
 $fontPrimaryColor: #ffffff;
+$fontMutedColor: #CACACA;
 $fontHoverColor: $nasaLightGray;
