Fix minor visual bugs

--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ nav {
   padding-bottom: 10px; }
 
 .article-img {
-  height: 100%;
+  height: auto;
   width: 100%;
   display: block; }
 
@@ -135,6 +135,8 @@ p.article-subtitle {
   border: 1px solid rgba(235, 235, 235, 0.5);
   border-left: none;
   border-collapse: separate;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
   border-top-right-radius: .5rem;
   border-bottom-right-radius: .5rem;
   background-color: #0e1114;
