--- a/css/style.scss
+++ b/css/style.scss
@@ -167,8 +167,8 @@ p.article-subtitle {
     border: 1px solid rgba($nasaWhite, 0.5);
     border-left: none;
     border-collapse: separate; 
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
     border-top-right-radius: .5rem;
     border-bottom-right-radius: .5rem;
     background-color: $nasaBlack;
