--- a/css/style.css
+++ b/css/style.css
@@ -157,11 +157,13 @@ p.article-subtitle {
 .social-links {
   list-style: none;
   display: inline-block;
-  font-size: 22px; }
+  font-size: 22px;
+  align-items: center;
+  align-content: center; }
 
 .social-links > li {
   display: inline-block;
-  padding-right: 15px; }
+  padding-right: 0.5rem; }
 
 /***************/
 /* Breakpoints */
