--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,12 @@ p.article-subtitle {
   font-weight: 700; }
 
 /* Navs */
+.dropdown-menu {
+  background-color: #666666; }
+
+.dropdown-item {
+  color: #ffffff; }
+
 .nav-item {
   font-size: 20px; }
 
@@ -191,7 +197,11 @@ p.article-subtitle {
     margin-right: 10%; }
 
   .navbar-brand {
-    margin-left: 10%; } }
+    margin-left: 10%; }
+
+  .dropdown:hover .dropdown-menu {
+    display: block;
+    margin-top: 0; } }
 /* Mobile Queries */
 @media screen and (max-width: 992px) {
   .center-on-mobile {
