--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,12 @@ p, a {
 /***********/
 /* Classes */
 /***********/
+.container {
+  width: 100%;
+  max-width: fit-content;
+  padding-left: 11%;
+  padding-right: 11%; }
+
 /* Utility */
 .placeholder {
   background-color: #efefef;
