Change container max-width

--- a/css/style.scss
+++ b/css/style.scss
@@ -66,7 +66,7 @@ p, a {
 
 .container {
     width: 100%;
-    max-width: fit-content;
+    max-width: 100%;
     padding-left: 11%;
     padding-right: 11%;
 }
