--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ p, a {
 /***********/
 .container {
   width: 100%;
-  max-width: fit-content;
+  max-width: 100%;
   padding-left: 11%;
   padding-right: 11%; }
 
