--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,9 @@
 /* Global Elements */
 /*******************/
 a {
-  color: #ffffff; }
+  color: #ffffff;
+  font-family: 'Avenir-Light', 'Montserrat', sans-serif;
+  font-size: 20px; }
 
 a:hover {
   color: #999999;
@@ -42,9 +44,10 @@ nav {
   background-color: #0e1114;
   border-bottom: 1px solid rgba(235, 235, 235, 0.25); }
 
-p, a {
+p {
   font-family: 'Avenir-Light', 'Montserrat', sans-serif;
-  font-size: 20px; }
+  font-size: 14px;
+  color: rgba(255, 255, 255, 0.75); }
 
 /***********/
 /* Classes */
@@ -56,6 +59,18 @@ p, a {
   padding-right: 11%; }
 
 /* Utility */
+.captioned-img {
+  position: relative; }
+
+.img-caption {
+  text-align: center;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: rgba(14, 17, 20, 0.8);
+  font-size: 1rem; }
+
 .placeholder {
   background-color: #efefef;
   border: 4px gray solid;
