Add workaround for #5 and minor styling

--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,9 @@ p {
   padding-right: 11%; }
 
 /* Utility */
+.btn-rounded {
+  border-radius: 10px; }
+
 .captioned-img {
   position: relative; }
 
