--- a/css/style.scss
+++ b/css/style.scss
@@ -94,6 +94,11 @@ strong {
     position: relative;
 }
 
+.captioned-img > p {
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+
 .img-caption {
     text-align: center;
     display: block;
