Added masthead images

--- a/css/style.css
+++ b/css/style.css
@@ -70,23 +70,6 @@ strong {
 .btn-rounded {
   border-radius: 10px; }
 
-.captioned-img {
-  position: relative; }
-
-.captioned-img > p {
-  margin-bottom: 0;
-  padding-bottom: 0; }
-
-.img-caption {
-  text-align: center;
-  display: block;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  background-color: rgba(14, 17, 20, 0.8);
-  font-size: 1.25rem;
-  color: #ffffff; }
-
 .placeholder {
   background-color: #efefef;
   border: 4px gray solid;
@@ -167,6 +150,38 @@ p.article-subtitle {
 
 .card-text {
   color: #CACACA; }
+
+/* Images */
+.captioned-img {
+  position: relative; }
+
+.captioned-img > p {
+  margin-bottom: 0;
+  padding-bottom: 0; }
+
+.img-caption {
+  text-align: center;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: rgba(14, 17, 20, 0.8);
+  font-size: 1.25rem;
+  color: #ffffff; }
+
+.img-banner-container {
+  position: relative; }
+
+.img-banner-container > img {
+  width: 100vw;
+  height: 250px;
+  margin-left: calc(50% - 50vw);
+  object-fit: cover;
+  object-position: center top; }
+
+.img-banner-title {
+  position: absolute;
+  bottom: 10%; }
 
 /* Jumbostron */
 .jumbotron {
