Update typography based on style guide

--- a/css/style.scss
+++ b/css/style.scss
@@ -49,13 +49,25 @@ footer {
     background-color: #000000;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2 {
     font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
 }
 
 h1 {
-    font-weight: 800;
-    text-transform: uppercase;
+    font-size: 50px;
+}
+
+h2 {
+    font-size: 30px;
+}
+
+h3, h4, h5, h6, p {
+    font-family: 'Avenir-Light', 'Montserrat', sans-serif;
+}
+
+h3 {
+    font-size: 24px;
 }
 
 nav {
@@ -64,8 +76,7 @@ nav {
 }
 
 p {
-    font-family: 'Avenir-Light', 'Montserrat', sans-serif;
-    font-size: 1.15rem;
+    font-size: 20px;
     color: rgba($fontPrimaryColor, 0.75);
 }
 
@@ -175,6 +186,7 @@ p.article-subtitle {
     content: "•";
     padding-left: 10px;
     padding-right: 10px;
+    font-style: normal;
 }
 
 .article-title {
