--- a/css/style.css
+++ b/css/style.css
@@ -38,20 +38,28 @@ body {
 footer {
   background-color: #000000; }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Montserrat', sans-serif; }
+h1, h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600; }
 
 h1 {
-  font-weight: 800;
-  text-transform: uppercase; }
+  font-size: 50px; }
+
+h2 {
+  font-size: 30px; }
+
+h3, h4, h5, h6, p {
+  font-family: 'Avenir-Light', 'Montserrat', sans-serif; }
+
+h3 {
+  font-size: 24px; }
 
 nav {
   background-color: #0e1114;
   border-bottom: 1px solid rgba(235, 235, 235, 0.25); }
 
 p {
-  font-family: 'Avenir-Light', 'Montserrat', sans-serif;
-  font-size: 1.15rem;
+  font-size: 20px;
   color: rgba(255, 255, 255, 0.75); }
 
 strong {
@@ -139,7 +147,8 @@ p.article-subtitle {
 .article-subtitle > i::before {
   content: "•";
   padding-left: 10px;
-  padding-right: 10px; }
+  padding-right: 10px;
+  font-style: normal; }
 
 .article-title {
   color: #ffffff; }
