--- a/css/style.scss
+++ b/css/style.scss
@@ -207,6 +207,11 @@ p.article-subtitle {
 
 .card-text {
     color: $fontMutedColor;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 /* Images */
