Make article images wide

--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,12 @@ strong {
   width: 100%;
   display: block; }
 
+.article-img-wide {
+  height: 300px;
+  width: 100%;
+  display: block;
+  object-fit: cover; }
+
 .article-img-lg {
   padding-bottom: 20px; }
 
