--- a/css/style.scss
+++ b/css/style.scss
@@ -49,9 +49,9 @@ footer {
     background-color: #000000;
 }
 
-h1, h2 {
+h1, h2, h3 {
     font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
+    font-weight: 800;
 }
 
 h1 {
@@ -62,12 +62,12 @@ h2 {
     font-size: 30px;
 }
 
-h3, h4, h5, h6, p {
-    font-family: 'Avenir-Light', 'Montserrat', sans-serif;
-}
-
 h3 {
     font-size: 24px;
+}
+
+h4, h5, h6, p {
+    font-family: 'Avenir-Light', 'Montserrat', sans-serif;
 }
 
 nav {
@@ -195,6 +195,7 @@ p.article-subtitle {
 
 .article-title {
     color: $fontPrimaryColor;
+    font-weight: 800;
 }
 
 /* Cards */
@@ -211,6 +212,11 @@ p.article-subtitle {
 
 .card-title, .card-text {
     color: $fontPrimaryColor;
+}
+
+.card-title {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 800;
 }
 
 .card-text {
@@ -281,7 +287,7 @@ p.article-subtitle {
 }
 
 .jumbotron-title {
-    font-weight: 700;
+    font-weight: 800;
     color: $fontPrimaryColor;
 }
 
